# bazel-oci

./: BUILD  MODULE.bazel  script.py
docker/: BUILD  bookworm.lock.json  bookworm.yaml
