
module(
    version = "0.1.0",
    repo_name = "bazel_oci",
)


bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "platforms", version = "0.0.9")
bazel_dep(name = "rules_python", version = "0.32.2")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.11",
    requirements_lock = "//third_party:requirements_lock.txt",
)
use_repo(pip, "pip")

bazel_dep(name = "rules_oci", version = "1.7.6")
# For testing, we also recommend https://registry.bazel.build/modules/container_structure_test

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

# Declare external images you need to pull, for example:
oci.pull(
    name = "distroless_base",
    image = "debian",
    platforms = [
        "linux/amd64",
    ],
    # 'latest' is not reproducible, but it's convenient.
    # During the build we print a WARNING message that includes recommended 'digest' and 'platforms'
    # values which you can use here in place of 'tag' to pin for reproducibility.
    tag = "bookworm-20240612",
)

# For each oci.pull call, repeat the "name" here to expose them as dependencies.
use_repo(oci, "distroless_base")

bazel_dep(name = "rules_pkg", version = "1.0.0")

# TODO(d61h6l4) Remove after PR merged:
# https://github.com/bazelbuild/bazel-central-registry/pull/2180
archive_override(
    module_name = "rules_pkg",
    strip_prefix = "rules_pkg-1.0.0",
    urls = "https://github.com/bazelbuild/rules_pkg/archive/refs/tags/1.0.0.tar.gz",
)

bazel_dep(name = "container_structure_test", version = "1.16.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.7.3")
bazel_dep(name = "rules_distroless", version = "0.3.3")

# TODO(d61h6k4) Remove after merging PR:
# https://github.com/GoogleContainerTools/rules_distroless/pull/50
git_override(
    module_name = "rules_distroless",
    commit = "f06d81a716997253d5dff0b9db5c71d36e82cad3",
    remote = "https://github.com/jacobshirley/rules_distroless",
)

apt = use_extension("@rules_distroless//apt:extensions.bzl", "apt")
apt.deb_index(
    name = "bookworm",
    lock = "//docker:bookworm.lock.json",
    manifest = "//docker:bookworm.yaml",
)
use_repo(apt, "bookworm")
